2025-08-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-user-regexp): Exclude "[" and "]".
	(tramp-completion-make-tramp-file-name): Handle port for IPv6 hosts.
	(tramp-completion-handle-file-directory-p)
	(tramp-completion-handle-file-exists-p): Simplify.
	(tramp-completion-handle-file-name-completion): Ignore PREDICATE.
	(tramp-completion-dissect-file-name): Handle ports.
	(tramp-parse-default-user-host): Suppress '(nil nil) result.
	(tramp-parse-file): Delete duplicates.
	(tramp-parse-shosts-group): Accept also IPv6 addresses.
	(tramp-handle-file-directory-p): Return t for filenames
	"/method:foo:".
	(tramp-parse-auth-sources, tramp-parse-netrc):
	* tramp-cache.el (tramp-parse-connection-properties):
	* tramp-gvfs.el (tramp-gvfs-parse-device-names):
	Use `tramp-compat-seq-keep'.

2025-08-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-message.el (tramp-debug-buffer-limit): Change default to
	100MB.  Suggested by Francesco Potortì <pot@potorti.it>.

2025-08-17  John-David T. Smith  <jdsmith@alum.mit.edu>

	Adapt Tramp to new autoload-macro expand  Bug #78995.

	* tramp-compat.el (tramp-loaddefs): Suppress error on requiring
	tramp-loaddef.

	* tramp.el (tramp--with-startup): Declare autoload-macro expand,
	and suppress warnings about this declare form on older versions of
	Emacs.

2025-08-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-timeout-session): Do not timeout when buffer
	is modified, or in auto-revert mode.

2025-08-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-get-remote-touch): Simplify.

2025-08-16  Toru TSUNEYOSHI  <t_tuneyosi@hotmail.com>

	* tramp-sh.el (tramp-get-remote-touch): Set connection property
	"touch-h".
	(tramp-sh-handle-set-file-times): Use it.

2025-08-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-message.el (tramp-debug-buffer-limit): New defcustom.
	(tramp-debug-message): Use it.  (Bug#79182)

2025-08-09  Michael Albinus  <michael.albinus@gmx.de>
