@@ -1,5 +1,10 @@
 2025-08-29  Michael Albinus  <michael.albinus@gmx.de>
 
+	* tramp.el (tramp-parse-default-user-host): Fix thinko.
+	(tramp-handle-file-directory-p): Extend simple check.
+
+2025-08-29  Michael Albinus  <michael.albinus@gmx.de>
+
 	* tramp.el (tramp-user-regexp): Exclude "[" and "]".
 	(tramp-completion-make-tramp-file-name): Handle port for IPv6 hosts.
 	(tramp-completion-handle-file-directory-p)
